# xlings-project-templates

./: README.md
.github/workflows/: gitee-sync.yml
cmake/helloworld/: CMakeLists.txt
cpp23/cmake/helloworld/: .gitignore  CMakeLists.txt  README.md  config.xlings  main.cpp
cpp23/xmake/helloworld/: .gitignore  README.md  config.xlings  xmake.lua
cpp23/xmake/helloworld/src/: main.cpp
